--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -28,8 +28,8 @@ body {
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
-                <span class="display-1 d-block">Wrong Request</span>
-                <div class="mb-4 lead">The page you are looking for was not found.</div>
+                <span class="display-1 d-block">Wrong Request/ Server Error, Please try again</span>
+                <div class="mb-4 lead">The page you are looking for was not found or may be down.</div>
                 <a href="/" class="btn btn-link">Go back to Home Page</a> 
             </div>
         </div>
