--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 	<div class="container ">
 		<div class="login-form">
 			<div>
-				<h2 style="text-align:center">"Admin Portal" </h2>
+				<h2 style="text-align:center"> SHAREBUDDY Admin Portal</h2>
 			</div>
 			<form th:action="@{/login}" method="post">
 				<div class="login">
